# otus_diploma

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
data/: trajectory.csv
docs/: docs.md
src/: main.cpp
src/calculators/attribute_analysis_calculator/: attribute_analysis_calculator.h  cosine_phase_analysis_calculator.cpp  cosine_phase_attribute_analysis_calculator.h  energy_attribute_analysis_calculator.cpp  energy_attribute_analysis_calculator.h  hilbert_attribute_analysis_calculator.cpp  hilbert_attribute_analysis_calculator.h
src/calculators/depth_section_calculator/: depth_section_calculator.h  simple_depth_section_calculator.cpp  simple_depth_section_calculator.h
src/domain/: attribute_analysis.hpp  depth_section.hpp  layer.hpp  position.hpp  radargram.cpp  radargram.h  radargram.hpp  trajectory.hpp
src/importers/: geoscan_project_importer.cpp  geoscan_project_importer.h  project_importer.h
src/project/: project.cpp  project.h
src/snapshot/: snapshot.h
src/trajectory_exporters/: csv_trajectory_exporter.cpp  csv_trajectory_exporter.h  trajectory_exporter.hpp
src/trajectory_importers/: csv_trajectory_importer.cpp  csv_trajectory_importer.h  trajectory_importer.hpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  modal_progress_dialog.hpp
src/ui/workers/: attribute_analysis_worker.hpp
src/utils/: helpers.hpp
src/widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test_example.cpp
tests/calculators/: attribute_analysis_calculator_test.cpp  depth_section_calculator_test.cpp
tests/project/: mock.h  project_test.cpp
tests/utils/: helpers_test.cpp
